--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -31,9 +31,16 @@
     </style>
   </head>
   <body>
+
     <h1>Mi primer ejemplo CSS</h1>
+
     <p>Esto es un párrafo.</p>
+
     <div id="miIndentificador">Texto del identificador</div>
+
     <div class="miClase">Texto de mi clase</div>
+
+    <div style="color: yellow;background-color: blue;">Texto con estilos en linea</div>
+
   </body>
 </html>
