--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -9,15 +9,10 @@
   </head>
   <body>
 
-    <h1>Mi primer ejemplo CSS</h1>
-
-    <p>Esto es un párrafo.</p>
-
-    <div id="miIndentificador">Texto del identificador</div>
-
-    <div class="miClase">Texto de mi clase</div>
-
-    <div style="color: yellow;background-color: blue;">Texto con estilos en linea</div>
+    <h1>soy texto  de cabecera</h1>
+    <h2>soy texto de cabecera más pequeña</h2>
+    <p>texto de un párrafo.</p>
+    <div>texto normal</div>
 
   </body>
 </html>
