--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
+    <h2>Selectores</h2>
 
-    <h1>soy texto  de cabecera</h1>
-    <h2>soy texto de cabecera más pequeña</h2>
-    <p>texto de un párrafo.</p>
-    <div>texto normal</div>
+    <div>
+      <p>parrafo 1</p>
+      <p>parrafo 2</p>
+      <section><p>parrafo 3</p></section>
+    </div>
+
+    <p>parrafo 4. fuera</p>
+    <code>Some code.</code>
+    <p>parrafo 5. fuera</p>
 
   </body>
 </html>
