pseudo clases y pseudo elements

--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -8,17 +8,12 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <h2>Selectores</h2>
 
-    <div>
-      <p>parrafo 1</p>
-      <p>parrafo 2</p>
-      <section><p>parrafo 3</p></section>
+    <div>pasa el raton para ver el elemento
+        <p>Hola aqui estoy</p>
     </div>
 
-    <p>parrafo 4. fuera</p>
-    <code>Some code.</code>
-    <p>parrafo 5. fuera</p>
+    <div class="miClase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, quis consequuntur? Eveniet culpa voluptatibus impedit distinctio dolores asperiores ipsa veniam! Quidem ut quaerat sed deleniti veritatis est cupiditate excepturi a.</div>
 
   </body>
 </html>
