--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <h2>Selectores</h2>
 
-    <div>
-      <p>parrafo 1</p>
-      <p>parrafo 2</p>
-      <section><p>parrafo 3</p></section>
-    </div>
+    <div class="static">
+      This div element has position: static;
+      </div>
 
-    <p>parrafo 4. fuera</p>
-    <code>Some code.</code>
-    <p>parrafo 5. fuera</p>
+      <div class="relative">This div element has position: relative;
+        <div class="absolute">This div element has position: absolute;</div>
+      </div>
+
+        <div class="fixed">
+          This div element has position: fixed;
+          </div>
 
   </body>
 </html>
