--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -5,42 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ejercicio</title>
-
-    <style>
-      body {
-        background-color: lightblue;
-      }
-
-      h1 {
-        color: white;
-        text-align: center;
-      }
-
-      p {
-        font-family: verdana;
-        font-size: 20px;
-      }
-
-      #miIndentificador {
-        color: blue;
-      }
-
-      .miClase {
-        color: green;
-      }
-    </style>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
 
-    <h1>Mi primer ejemplo CSS</h1>
-
-    <p>Esto es un párrafo.</p>
-
-    <div id="miIndentificador">Texto del identificador</div>
-
-    <div class="miClase">Texto de mi clase</div>
-
-    <div style="color: yellow;background-color: blue;">Texto con estilos en linea</div>
-
+    <div class="unaFuente">Esto es un párrafo con fuente Lucida Console .</p>
+      <div class="otraFuente">Esto es un párrafo con fuente Georgia .</p>
   </body>
 </html>
