--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
 
-    <div class="unaFuente">Esto es un párrafo con fuente Lucida Console .</p>
-      <div class="otraFuente">Esto es un párrafo con fuente Georgia .</p>
+    <p>selecciona el enlace: <a href="https://www.google.com" target="_blank">google</a></p>
   </body>
 </html>
