--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ejercicio</title>
 
-    <style>
+    <!-- <style>
       body {
         background-color: lightblue;
       }
@@ -28,19 +28,24 @@
       .miClase {
         color: green;
       }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
 
     <h1>Mi primer ejemplo CSS</h1>
 
-    <p>Esto es un párrafo.</p>
+    <p class="claseParrafo">Esto es un párrafo.</p>
 
-    <div id="miIndentificador">Texto del identificador</div>
+    <div id="miIndentificador">Texto del identificador1</div>
 
-    <div class="miClase">Texto de mi clase</div>
+    <div class="miClase">Texto de mi clase1</div>
+    <div class="miClase">Texto de mi clase2</div>
+    <div class="miClase">Texto de mi clase3</div>
+    <div class="miClase">Texto de mi clase4</div>
+    <div class="miClase">Texto de mi clase5</div>
+    <div class="miClase">Texto de mi clase6</div>
 
     <div style="color: yellow;background-color: blue;">Texto con estilos en linea</div>
-
   </body>
 </html>
