--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
 
-    <div class="miClase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, quis consequuntur? Eveniet culpa voluptatibus impedit distinctio dolores asperiores ipsa veniam! Quidem ut quaerat sed deleniti veritatis est cupiditate excepturi a.</div>
+    <div class="flex-container">
+      <div>item 1</div>
+      <div>item 2</div>
+      <div>item 3</div>
+      <div>item 4</div>  
+      <div>item 5</div>  
+    </div>
 
   </body>
 </html>
