--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -9,13 +9,7 @@
   </head>
   <body>
 
-    <div class="flex-container">
-      <div>item 1</div>
-      <div>item 2</div>
-      <div>item 3</div>
-      <div>item 4</div>  
-      <div>item 5</div>  
-    </div>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatum distinctio similique amet enim aliquid impedit, ab placeat! Molestiae deleniti dolores provident quisquam. Possimus, porro. Assumenda amet aperiam quod reiciendis.</div> 
 
   </body>
 </html>
