--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,6 +10,6 @@
   <body>
 
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum voluptatum distinctio similique amet enim aliquid impedit, ab placeat! Molestiae deleniti dolores provident quisquam. Possimus, porro. Assumenda amet aperiam quod reiciendis.</div> 
-
+     <a class="externo" href="http://www.google.es">GOOGLE</a>
   </body>
 </html>
