--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ejercicio</title>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-  </head>
-  <body>
 
-    <p><img src="./assets/images/pears.jpg" alt="Pineapple" style="width:170px;height:170px;margin-left:15px;">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ejercicio</title>
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+</head>
+
+<body>
+
+  <div class="header">
+    <h1>Cabecera</h1>
+  </div>
+
+  <div class="menu">
+    <ul>
+      <li>opcion de menu 1</li>
+      <li>opcion de menu 2</li>
+      <li>opcion de menu 3</li>
+      <li>opcion de menu 4</li>
+    </ul>
+  </div>
+
+  <div class="main">
+    <h1>Articulo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deserunt cupiditate autem laborum commodi explicabo dolores necessitatibus perferendis nostrum sed voluptates eius id ad quasi veniam, corporis quo cum facere!.</p>
+    <p>Resize the browser window to see how the content respond to the resizing.</p>
+  </div>
+
+</body>
+
 </html>
