--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -11,24 +11,10 @@
 
 <body>
 
-  <div class="header">
-    <h1>Cabecera</h1>
-  </div>
+  <h1>Ejemplo de Media Query #1</h1>
 
-  <div class="menu">
-    <ul>
-      <li>opcion de menu 1</li>
-      <li>opcion de menu 2</li>
-      <li>opcion de menu 3</li>
-      <li>opcion de menu 4</li>
-    </ul>
-  </div>
-
-  <div class="main">
-    <h1>Articulo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deserunt cupiditate autem laborum commodi explicabo dolores necessitatibus perferendis nostrum sed voluptates eius id ad quasi veniam, corporis quo cum facere!.</p>
-    <p>Resize the browser window to see how the content respond to the resizing.</p>
-  </div>
+  <p>Reduce el ancho de la ventana a 600 px o menos.</p>
+  <p>Observe cómo el color de fondo cambió de blanco a azul.</p>
 
 </body>
 
