--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -11,10 +11,17 @@
 
 <body>
 
-  <h1>Ejemplo de Media Query #1</h1>
+  <h1>Grid Layout</h1>
 
-  <p>Reduce el ancho de la ventana a 600 px o menos.</p>
-  <p>Observe cómo el color de fondo cambió de blanco a azul.</p>
+  <p>This grid layout contains six columns and three rows:</p>
+  
+  <div class="grid-container">
+    <div class="item1">Header</div>
+    <div class="item2">Menu</div>
+    <div class="item3">Main</div>  
+    <div class="item4">Right</div>
+    <div class="item5">Footer</div>
+  </div>
 
 </body>
 
