--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -1,21 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ejercicio</title>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-  </head>
-  <body>
 
-    <div class="flex-container">
-      <div>item 1</div>
-      <div>item 2</div>
-      <div>item 3</div>
-      <div>item 4</div>  
-      <div>item 5</div>  
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ejercicio</title>
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+</head>
+
+<body>
+
+  <h2>Responsive navigation menu</h2>
+  <p>Resize the browser window to see the effect: When the screen is less than 600px, the navigation menu will be
+    displayed vertically instead of horizontally.</p>
+
+  <div class="row">
+    <div class="column" style="background-color:#aaa;">
+      <h2>Column 1</h2>
+      <p>Some text..</p>
     </div>
+    <div class="column" style="background-color:#bbb;">
+      <h2>Column 2</h2>
+      <p>Some text..</p>
+    </div>
+    <div class="column" style="background-color:#ccc;">
+      <h2>Column 3</h2>
+      <p>Some text..</p>
+    </div>
+    <div class="column" style="background-color:#ddd;">
+      <h2>Column 4</h2>
+      <p>Some text..</p>
+    </div>
+  </div>
 
-  </body>
+
+  <div class="row">
+    <div class="column" style="background-color:#aaa;">
+      <h2>Column 11</h2>
+      <p>Some text..</p>
+    </div>
+    <div class="column" style="background-color:#bbb;">
+      <h2>Column 22</h2>
+      <p>Some text..</p>
+    </div>
+    <div class="column" style="background-color:#ccc;">
+      <h2>Column 33</h2>
+      <p>Some text..</p>
+    </div>
+    <div class="column" style="background-color:#ddd;">
+      <h2>Column 44</h2>
+      <p>Some text..</p>
+    </div>
+  </div>
+
+
+</body>
+
 </html>
