--- a/ejerciciosCss/index.html
+++ b/ejerciciosCss/index.html
@@ -11,47 +11,55 @@
 
 <body>
 
-  <h2>Responsive navigation menu</h2>
-  <p>Resize the browser window to see the effect: When the screen is less than 600px, the navigation menu will be
-    displayed vertically instead of horizontally.</p>
+  <!-- Header -->
+  <div class="header">
+    <h1>My Website</h1>
+    <p>With a <b>flexible</b> layout.</p>
+  </div>
 
+  <!-- Navigation Bar -->
+  <div class="navbar">
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+  </div>
+
+  <!-- The flexible grid (content) -->
   <div class="row">
-    <div class="column" style="background-color:#aaa;">
-      <h2>Column 1</h2>
-      <p>Some text..</p>
+    <div class="side">
+      <h2>About Me</h2>
+      <h5>Photo of me:</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <h3>More Text</h3>
+      <p>Lorem ipsum dolor sit ame.</p>
+      <div class="fakeimg" style="height:60px;">Image</div><br>
+      <div class="fakeimg" style="height:60px;">Image</div><br>
+      <div class="fakeimg" style="height:60px;">Image</div>
     </div>
-    <div class="column" style="background-color:#bbb;">
-      <h2>Column 2</h2>
+    <div class="main">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text..</p>
-    </div>
-    <div class="column" style="background-color:#ccc;">
-      <h2>Column 3</h2>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+      </p>
+      <br>
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text..</p>
-    </div>
-    <div class="column" style="background-color:#ddd;">
-      <h2>Column 4</h2>
-      <p>Some text..</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+      </p>
     </div>
   </div>
 
-
-  <div class="row">
-    <div class="column" style="background-color:#aaa;">
-      <h2>Column 11</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column" style="background-color:#bbb;">
-      <h2>Column 22</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column" style="background-color:#ccc;">
-      <h2>Column 33</h2>
-      <p>Some text..</p>
-    </div>
-    <div class="column" style="background-color:#ddd;">
-      <h2>Column 44</h2>
-      <p>Some text..</p>
-    </div>
+  <!-- Footer -->
+  <div class="footer">
+    <h2>Footer</h2>
   </div>
 
 
